[package]
name = "github-clone-org"
version = "0.1.0"
authors = ["Daniel <30466471+daniel0611@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.8.1", features = ["macros", "rt-multi-thread"] }
futures = "^0.3.15"
reqwest = { version = "^0.11.4", features = ["json"] }
serde = { version = "^1.0.126", features = ["derive"] }
git2 = "^0.13.20"
clap = "3.0.0-beta.2"

[dev-dependencies]
tempfile = "^3.2.0"
cargo-husky = {version = "^1.5.0", default-features =false, features = ["precommit-hook", "run-cargo-fmt"]}