[package]
name = "github-clone-org"
version = "0.1.0"
authors = ["Daniel <30466471+daniel0611@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.20.3", features = ["macros", "rt-multi-thread"] }
futures = "^0.3.21"
reqwest = { version = "^0.11.11", features = ["json"] }
serde = { version = "^1.0.137", features = ["derive"] }
git2 = "^0.14.4"
clap = { version = "^3.2.6", features = ["derive", "cargo"] }

[dev-dependencies]
tempfile = "^3.3.0"
cargo-husky = {version = "^1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-fmt"]}