[package]
name = "github-clone-org"
version = "0.1.0"
authors = ["Daniel <30466471+daniel0611@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36.0", features = ["macros", "rt-multi-thread"] }
futures = "^0.3.30"
reqwest = { version = "^0.11.24", features = ["json"] }
serde = { version = "^1.0.196", features = ["derive"] }
git2 = "^0.18.2"
clap = { version = "^4.5.0", features = ["derive", "cargo"] }

[dev-dependencies]
tempfile = "^3.10.0"
cargo-husky = {version = "^1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-fmt"]}
